syntax = "proto3";

option csharp_namespace = "IdentityService.Grpc";

package identity;

message GetUserByIdRequest {
  string id = 1;  // Guid به صورت string
}

message UserReply {
  string id = 1;
  string email = 2;
  string display_name = 3;
  string avatar_url = 4;
  repeated string roles = 5;
}

service UserService {
  rpc GetUserById (GetUserByIdRequest) returns (UserReply);
}
